--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.11.2",
         "bulma": "^0.7.5",
+        "font-awesome": "^4.7.0",
+        "font-awesome-icons": "^1.6.0",
         "vue-axios": "^2.1.5",
         "vue-material": "^1.0.0-beta-11"
     }
